@@ -6,8 +6,13 @@
   :dependencies [[org.clojure/clojure "1.10.3"]
                  [org.clojure/math.combinatorics "0.1.6"]
                  [org.clojure/tools.trace "0.7.11"]
-                 [org.clojure/data.priority-map "1.1.0"]]
+                 [org.clojure/data.priority-map "1.1.0"]
+                 [com.clojure-goes-fast/clj-async-profiler "0.5.1"]
+]
 
+
+
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"]
   :main ^:skip-aot advent-of-code.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all
